--- a/src/CSS/Footer/Footer.css
+++ b/src/CSS/Footer/Footer.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    transform: translateY(-20px); /* Button move up */
+    transform: translateY(-20px); 
 }
 
 .footerSideContainer{
@@ -46,13 +46,13 @@
     border: none;
     background: none;
     cursor: pointer;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* Button move transition */
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; 
 }
 
 .footerIconButton:hover{
     opacity: 70%;
-    transform: translateX(10px) translateY(-10px); /* Button move over */
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.3); /* Button shadow on hover */
+    transform: translateX(10px) translateY(-10px); 
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.3); 
 }
 
 .scheduleButton {
@@ -61,32 +61,32 @@
     background-color: rgb(182, 227, 212);
     color: black;
     font-size: 1rem;
-    border: 2px solid black; /* Add a small black border */
+    border: 2px solid black; 
     cursor: pointer;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* Button move transition */
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; 
   }
   
 
 .scheduleButton:hover {
     opacity: 70%;
-    transform: translateY(-10px); /* Button move up on hover */
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); /* Button shadow on hover */
+    transform: translateY(-10px);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); 
 }
 
-/* Styles for screens smaller than 768px */
+
 @media screen and (max-width: 768px) {
     #bannerContainer {
         flex-direction: column;
-        gap: 20px; /* Gap between footer sections on small screens */
+        gap: 20px; 
     }
 }
 
-/* Styles for screens larger than or equal to 768px */
+
 @media screen and (min-width: 768px) {
     .footerSideContainer {
         width: 50%;
     }
     #footerIcons {
-        transform: translateY(0); /* Reset button move up on larger screens */
+        transform: translateY(0); 
     }
 }
