--- a/src/CSS/Main Content/Contact/Contact.css
+++ b/src/CSS/Main Content/Contact/Contact.css
@@ -1,3 +1,11 @@
+#contactBodyContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
 .contact-form-container {
     width: 40%;
 }
