--- a/src/CSS/Main Content/Home/Home.css
+++ b/src/CSS/Main Content/Home/Home.css
@@ -54,6 +54,13 @@
   overflow-y: auto;
   padding: 20px;
   box-sizing: border-box;
+  overflow-y: auto;
+  &::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+  }
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .testimonial__profile-pic {
@@ -150,3 +157,47 @@
 .testimonials-container .arrow-button:nth-child(3) {
   right: 5%;
 }
+
+.styledContainer {
+  background-color: #A9CE6E;
+  color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 100%;
+  margin: 20px auto;
+  display: flex; 
+  justify-content: space-between; 
+  align-items: center; 
+}
+
+.textContainer {
+  width: 60%; 
+}
+
+.imageContainer {
+  flex: 1; 
+  padding: 20px; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
+
+.imageContainer img {
+  max-width: 100%; 
+  max-height: 300px; 
+  border-radius: 8px; 
+}
+
+
+/* Existing styles */
+.styledContainer .title {
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.styledContainer .content {
+  white-space: pre-line;
+  font-size: 16px;
+}
+
