--- a/src/CSS/Main Content/Patients/Patients.css
+++ b/src/CSS/Main Content/Patients/Patients.css
@@ -3,6 +3,9 @@
     flex-direction: row;
     margin-bottom: 25px;
     transition: ease-in .3s;
+    text-decoration: none;
+    align-items: stretch;
+    padding-left: 60px;
 }
 
 .patientFormIcon{
@@ -12,12 +15,26 @@
 .patientFormTextContainer{
     text-align: left;
     background-color: #9CD4D7;
-    padding: 10px;
-    width: 600px; /* Modify this value as per your needs */
+    padding: 20px; 
+    width: 600px; 
+    position: relative; /* For the left icon positioning */
+}
+
+.patientFormTextContainer::before {
+    content: "";
+    background: url('../../../Assets/Icons/clipboard.png') no-repeat center;
+    background-size: contain;
+    position: absolute;
+    top: 50%;
+    left: 15px;  
+    width: 40px;  
+    height: 40px;  
+    transform: translate(-165%, -50%);
 }
 
 .patientFormContainer:hover{
-    color: rgb(249, 249, 249)
+    color: rgb(249, 249, 249);
+    background-color: #b8e0e2;
 }
 
 .patientFormHeader{
@@ -47,4 +64,22 @@
 #patientFooterContainer{
     text-align: center;
     margin-bottom: 40px;
+}
+
+.formRedirectIcon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 12px;
+    background-color: #2A6B78;
+    height: 100%;      
+    border-radius: 0 5px 5px 0; 
+    color: #FFFFFF;
+}
+
+.formRedirectIcon img {
+    width: 50px;  
+    height: auto;
+    margin-top: 10px;  
 }
