--- a/src/CSS/Navbar/Navbar.css
+++ b/src/CSS/Navbar/Navbar.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     top: 0;
     background-color: white;
+    
 }
 
 #navButtonContainer{
@@ -16,9 +17,9 @@
 
 #navbarLogoContainer{
     border: none;
-    /* background-color: red;
-    height: 100px;
-    width: 100px; */
+    display: flex;         
+    align-items: center;   
+    justify-content: center; 
     margin-left: 15px;
     margin-top: 15px;
     margin-bottom: 15px;
